Fleshed out index.html to ensure it is redirecting correctly.

--- a/data/index.html
+++ b/data/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ESP32 Web Server</title>
+  <title>Football Eye-Q Exercise System</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="data:,">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <h1>ESP32 Web Server</h1>
-  <p>GPIO state: <strong> %STATE%</strong></p>
-  <p><a href="/on"><button class="button">ON</button></a></p>
-  <p><a href="/off"><button class="button button2">OFF</button></a></p>
+  <div>
+    <div class="title-div">
+      <h1 id="title">Football Eye-Q Exercise system</h1>
+    </div>
+    <div id="connect-button-div">
+      <a href="/connect.html">
+        <button id="connect-button">Connect!</button>
+      </a>
+    </div>
+  </div>
 </body>
 </html>
