Added in proper styling and adding logic behind selecting exercises.

--- a/data/connect.html
+++ b/data/connect.html
@@ -9,15 +9,17 @@
 <body>
   <div>
     <div class="title-div">
-      <h2>Football Eye-Q Exercise system</h2>
-      <h3>Select an exercise:</h3>
+        <h2 class="title">Football Eye-Q Exercise system</h2>
+    </div>
+    <div class="title-div">
+        <h3 class="title">Select an exercise:</h3>
     </div>
     <div class="exercise-list">
-        <a href="/one" id="exercise-one">&#9917 Exercise 1</a>
-        <a href="/two" id="exercise-two">&#9917 Exercise 2</a>
-        <a href="/three" id="exercise-three">&#9917 Exercise 3</a>
-        <a href="/four" id="exercise-four">&#9917 Exercise 4</a>
-        <a href="/five" id="exercise-five">&#9917 Exercise 5</a>
+        <a href="/one" id="exercise-one">%FOOTBALL1% Exercise 1</a>
+        <a href="/two" id="exercise-two">%FOOTBALL2% Exercise 2</a>
+        <a href="/three" id="exercise-three">%FOOTBALL3% Exercise 3</a>
+        <a href="/four" id="exercise-four">%FOOTBALL4% Exercise 4</a>
+        <a href="/five" id="exercise-five">%FOOTBALL5% Exercise 5</a>
   </div>
   <div class="exercise-description">
         <h3> %TITLE% </h3>
@@ -25,11 +27,10 @@
             %DESC%
         </p>
   </div>
-  <div class="controls">
+  <div class="control">
     <a href="/start">
         <button id="start">START</button>
     </a>
-
     <a href="/stop">
         <button id="stop">STOP</button>
     </a>
