--- a/data/index.html
+++ b/data/index.html
@@ -9,9 +9,9 @@
 <body>
   <div>
     <div class="title-div">
-      <h1 id="title">Football Eye-Q Exercise system</h1>
+      <h1 class="title">Football Eye-Q Exercise system</h1>
     </div>
-    <div id="connect-button-div">
+    <div class="connect-button-div">
       <a href="/connect.html">
         <button id="connect-button">Connect!</button>
       </a>
